<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context=".DriversLicense">

    <EditText
        android:id="@+id/dobField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/et_bg"
        android:gravity="center_horizontal"
        android:hint="@string/dd_mm_yy"
        android:inputType="date"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@+id/addrField"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/addrField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_bg"
        android:gravity="center_horizontal"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/addrField"
        app:layout_constraintVertical_bias="0.868" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/et_bg"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/driver_s_license_form"
        android:textAlignment="center"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addrField">

        <RadioButton
            android:id="@+id/g1btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g1" />

        <RadioButton
            android:id="@+id/g2btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g2" />

        <RadioButton
            android:id="@+id/gbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g" />
    </RadioGroup>

    <Button
        android:id="@+id/hlpbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_documents"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>